--- a/job_web/templates/group/all_group.html
+++ b/job_web/templates/group/all_group.html
@@ -23,4 +23,6 @@
 </div>
 
 {{ render_pagination(pagination, 'group.index', kw=kw) }}
+
+<div id="barCharts" style="width: 1000px;height:500px;"></div>
 {% endblock %}
